# mcp-paradigm-py

./: .env.template  .gitignore  .mcpbignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  justfile  manifest.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: build-test.yml  publish.yml
docker/: Dockerfile
docs/: quickstart.md
src/mcp_paradigm/: __init__.py  __main__.py
src/mcp_paradigm/server/: server.py
src/mcp_paradigm/tools/: __init__.py  echo.py  firm.py  mmp.py  orders.py  pricing.py  prompts.py  reference_data.py  rfqs.py  trades.py  workflow.py
src/mcp_paradigm/tools/drfqv2/: __init__.py  mmp.py  orders.py  pricing.py  reference.py  rfqs.py  streaming.py  trades.py
src/mcp_paradigm/tools/fspd/: __init__.py  mmp.py  orderbook.py  orders.py  reference.py  system.py  trades.py
src/mcp_paradigm/tools/obv1/: __init__.py  markets.py  mmp.py  orders.py  pricing.py  quotes.py  reference.py  trades.py
src/mcp_paradigm/utils/: config.py  errors.py  models.py  paradigm_client.py  signing.py  ws_manager.py
tests/: conftest.py  test_client.py  test_drfqv2_counterparties.py  test_errors.py  test_integration.py  test_manifest_sync.py  test_prompts.py  test_signing.py  test_streaming_rejection.py  test_tool_enums.py  test_tool_registration.py  test_write_rejection.py  test_ws_manager.py
