[project]
name = "mcp-paradigm"
version = "0.1.0"
description = "MCP server for the Paradigm trading platform (DRFQv2 + FSPD)"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
authors = [
    {name = "Paradigm", email = "support@paradigm.co"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp[cli]>=1.27.1",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "websockets>=13.0",
    "typing-extensions>=4.13.0",
]

[project.urls]
Repository = "https://github.com/tradeparadigm/mcp-paradigm-py"
"Bug Tracker" = "https://github.com/tradeparadigm/mcp-paradigm-py/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.21.0",
]

[project.scripts]
mcp-paradigm = "mcp_paradigm.server.server:run_cli"

[project.entry-points."mcp.server"]
paradigm = "mcp_paradigm.server.server:server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_paradigm"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "C90",
    "N",
    "B",
    "UP",
    "C4",
    "SIM",
    "ARG",
    "PTH",
    "RUF",
]
ignore = [
    "E501",
    "E402",
    "F401",
    "ARG001",
    "RUF013",
    "B904",
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_paradigm"]
known-third-party = ["mcp", "httpx", "pydantic"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=mcp_paradigm --cov-report=term-missing"
asyncio_mode = "auto"
